<resources>
    <string name="app_name">KedaiKeun</string>
    <string name="listbarang">List Barang</string>
    <string name="inputbarang">Input Barang</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="main_menu">Main Menu</string>
    <string name="mobile_cashier">Mobile Cashier</string>
    <string name="barang_terjual">Barang Terjual</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="laba_usaha">Laba Usaha</string>
    <string name="modalnya">modalnya</string>
    <string name="crud">Apa yang bisa di lakukan?</string>
    <string name="transaksi_mudah">Transaksi Yang Mudah</string>
    <string name="transaksi">Transaksi</string>
    <string name="laporan">Laporan</string>
    <string name="version">Version</string>
    <string name="_1_0">1.0</string>
    <string name="all_right_reserved">All Right Reserved</string>
    <string name="_2017">2017</string>
    <string name="skip">Skip</string>
    <string name="lainnya">Lainnya</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">close</string>


</resources>
