<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#1E8BC3"
    tools:context="phantomshadow.example.com.kedaikeun.ui.LaporanTransaksi"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/laporan"
                        android:textColor="#fff"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"/>

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/keranjang"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#fff"
                        android:text="@string/jumlah_barang"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@id/jmlhBarangTersedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:text="0"/>
                </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barang_terjual"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerBarangTerjual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Laporan Lainnya"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/rupiahIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/rupiah"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/rupiahIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Jumlah Pendapatan"
                            android:textSize="18sp" />
                        <TextView
                            android:id="@+id/jmlhPendapatan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="250.000"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/transaksiIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/transaction2"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/transaksiIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Jumlah Transaksi"
                            android:textSize="18sp" />
                        <TextView
                            android:id="@+id/jmlhTransaksi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="10"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/labaIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/laba"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/labaIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toEndOf="@id/labaIcon"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/laba_usaha"
                            android:textSize="18sp" />
                        <TextView
                            android:id="@+id/lblShowModal"
                            android:textStyle="italic"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/modalnya"/>

                        <TextView
                            android:id="@+id/labaUsaha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="0"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/jmlhBarangTersedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0"
        android:textColor="#fff"
        android:textSize="20sp" />

</LinearLayout>
